02 Jan 2005: 0.1.1 Miek <miek@miek.nl>
   * Use strcmp instead of g_ascii_strcasecmp() as
     case is significant in unix fs
   * Don't gzip the files by default with backup.sh
   * added mirror/dump.sh which is an example wrapper
     script for backupping.
   * Manual pages were updated


31 Dec 2005: 0.1.0 Miek <miek@miek.nl>
   * Bumped version as rdup matures rapidly
   * Small fixes to the scripts 
   * Test infrastructure was added


30 Dec 2005: 0.0.4 Miek <miek@miek.nl>
   * Add the filesize to rdup's output. This change is 
     not backwards compatible. The output now is
     +/-MODE UID GID SIZE FILENAME
     SIZE = filesize in bytes
   * Added explicit timestamp file as suggest by Boris Goldowsky 
     (-N FILE, where the m_time of FILE is taken is the filestamp)
   Scripts:
   * Added remote directory with a script that can be piped
     to 'sftp b - user@remotehost'. This is a poor mans rsync - fully
     working though.
   * catch.sh and throw.sh are another remote backup implementation which
     allow encryption and zipping, only caveat is that the filesize
     MUST not change when fiddling with the contents of a file.
   * added hdup/ directory. The script in there implements the 
     core functionality of hdup2.
   Docs:
   * Started LaTeX document describing features and output
     of rdup and its scripts.
   Source:
   * Removed dump_type, backuptype is now implicitly stored in
     opt_timestamp (0 -> full, !0 -> inc)
   * Added -Os, this wipes 2K of the rdup exe (16%)
   * Ran 'rats':
     - take care getopts is not hit by a buffer overrun. 
     - Also removed potential race.


28 Dec 2005: 0.0.3 Miek <miek@miek.nl>
   * Reworked the source directory slighty, all mirror scripts
     are now in their own directory (mirror/)
   * Lots of documentation updates


26 Dec 2005: 0.0.2 Miek <miek@miek.nl>
   * Renamed to rdup.
   * rdup now uses GTree * instead of GSList *, making
     to incremental dump 100 times faster. 