@@ -1,14 +1,18 @@
 TODO: 
 # rdup util: 
 o ignore or handle signals? Needed to decide what to do with the FILELIST
-  and the timestamp
+  and the timestamp, at least sigpipe, fail gracefully.
 o better error handling on syscalls? bail out or try to continue?
 o getline is GNU-ism, freebsd has fgetln
 # rel. minor:
 o valgrind and g_free
 o documentation updates
 
-o graphic (GTK) frontend
+o graphic (GTK) frontend? What would it do?
+        - specify what to backup
+        - to where
+        - how often, cron interface
+        - systray info bubble - when doing backups
 
 # rest/shell 
 o shell script portability
@@ -17,12 +21,15 @@ o Encryption: it changes the file size! This means it cannot be
   directory done in a pipe - you first need to encrypt it and then
   do something with it
 o hist.sh go back more months?
+o where to place to aux. scripts? /usr/lib/rdup ??
 
 PARTLY DONE:
-o implement -n for yesterday/hist
-  29 Dec 2006, core function is there, but is it not finished yet
 
 DONE:
+o implement -n for yesterday/hist
+  29 Dec 2006, core function is there, but is it not finished yet
+  1 Jan, finished it.
+
 o make uninstall
   30 Dec 2006
 
