@@ -75,7 +75,7 @@ Where MODE is the st_mode from stat(2) and PATH is the path of the file. A
 typical example is: 
         33216 bin/rdup
 
-.SH OUTPUT
+.SH OUTPUT FORMAT
 The output generated by \fBrdup\fR is formatted like:
         +|-MODE UID GID SIZE PATH
 .PP
