@@ -1,0 +1,81 @@
+'\" t
+
+.TH CATCH.SH 1 "2 Jan 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
+
+.SH NAME
+catch.sh \- receive files when doing a remote dump
+
+.SH SYNOPSIS
+.B catch.sh
+[
+.IR OPTIONS
+]
+
+.SH DESCRIPTION
+\fBcatch.sh\fR receive files that are \fBthrown\fR from the remote 
+location and dump them in the backup directory. The files are read
+from standard input.
+
+.SH INPUT FORMAT
+The standard input catch.sh must adhere to the following format:
+        +|-MODE UID GID FILESIZE PATHSIZE\\nPATH FILE
+.PP
+Where:
+.TP
+.B o +|-
+plus or minus, indicating whether PATH should added or removed.
+.TP
+.B o MODE
+the st_mode from stat(2).
+.TP
+.B o UID
+the numerical user id of PATH. Note that if the first character of the
+line is '-' (i.e. remove) the UID will be zero.
+.TP
+.B o GID
+the numerical group id of PATH. Note that if the first character of the
+line is '-' (i.e. remove) the GID will be zero.
+.TP
+.B o FILESIZE
+the size of PATH. Note that if the first character of the line is '-'
+(.ie. remove) the FILESIZE will be zero. If PATH is a directory FILESIZE
+will also be zero. If PATH is a symbolic link the FILESIZE will be the
+size of the link name.
+.TP
+.B o PATHSIZE
+the size of PATH. Note that if the first character of the line is '-'
+(.ie. remove) the SIZE will be zero.
+.TP
+.B o PATH
+the pathname
+.TP
+.B o FILE
+a newline follows and then the (possibly binary) contents of the file.
+.PP
+A typical example look like this:
+        +33216 1000 1000 11288 120 8 bin/rdup 
+        <contents>
+
+.SH OPTIONS
+.TP
+.B \-b backupdir
+Alternate backup directory. Defaults to /vol/backup/`hostname`.
+.TP
+.B \-N 
+Dry-run, don't touch the filesystem, but echo the command exectuted.
+.TP
+.B \-z
+Gzip the file while receiving (not yet implemented).
+
+.SH EXAMPLES
+Here we backup remotely to \fBremotehost\fR. The catched
+files are dumped in \fB/vol/backup/remote\fR.
+        rdup LIST dir | throw.sh  | \\
+        ssh user@remotehost catch.sh -b /vol/backup/remote
+
+.SH FILES
+Root of the dump file system defaults to /vol/backup/`hostname`, but can
+be any location.
+
+.SH SEE ALSO
+throw.sh(1), hist(1) and rdup(8).
