@@ -1,0 +1,75 @@
+'\" t
+
+.TH THROW.SH 1 "2 Jan 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
+
+.SH NAME
+throw.sh \- send files
+
+.SH SYNOPSIS
+.B throw.sh
+[
+.IR OPTIONS
+]
+
+.SH DESCRIPTION
+\fBthrow.sh\fR send files so that \fBcatch.sh\fR can receive
+them at a remote location. throw.sh reads the output of rdup
+and generates a list on standard output.
+
+.SH OUTPUT FORMAT
+The output of throw.sh has the following charateristics:
+        +|-MODE UID GID FILESIZE PATHSIZE\\nPATH FILE
+.PP
+Where:
+.TP
+.B o +|-
+plus or minus, indicating whether PATH should added or removed.
+.TP
+.B o MODE
+the st_mode from stat(2).
+.TP
+.B o UID
+the numerical user id of PATH. Note that if the first character of the
+line is '-' (i.e. remove) the UID will be zero.
+.TP
+.B o GID
+the numerical group id of PATH. Note that if the first character of the
+line is '-' (i.e. remove) the GID will be zero.
+.TP
+.B o FILESIZE
+the size of PATH. Note that if the first character of the line is '-'
+(.ie. remove) the FILESIZE will be zero. If PATH is a directory FILESIZE
+will also be zero. If PATH is a symbolic link the FILESIZE will be the
+size of the link name.
+.TP
+.B o PATHSIZE
+the size of PATH. Note that if the first character of the line is '-'
+(.ie. remove) the SIZE will be zero.
+.TP
+.B o PATH
+the pathname
+.TP
+.B o FILE
+a newline follows and then the (possibly binary) contents of the file.
+.PP
+A typical example look like this:
+        +33216 1000 1000 11288 120 8 bin/rdup
+        <contents>
+
+.SH OPTIONS
+.TP
+.B \-z
+Gzip the file while sending (not yet implemented).
+
+.SH EXAMPLES
+Here we backup remotely to \fBremotehost\fR. The catched
+files are dumped in \fB/vol/backup/remote\fR.
+        rdup LIST dir | throw.sh  | \\
+        ssh user@remotehost catch.sh -b /vol/backup/remote
+
+.SH FILES
+Root of the dump file system defaults to /vol/backup/`hostname`, but can
+be any location.
+
+.SH SEE ALSO
+catch.sh(1), hist(1) and rdup(8).
