@@ -1,3 +1,9 @@
+xx Jan 2005: 0.1.2 Miek <miek@miek.nl>
+   * Added manpages remote/catch.sh.1 and remote/throw.sh.1
+
+   Code:
+   * refactored printing
+
 02 Jan 2005: 0.1.1 Miek <miek@miek.nl>
    * Use strcmp instead of g_ascii_strcasecmp() as
      case is significant in unix fs
